# guile-yamlpp

./: .gitignore  Makefile.am  README.org  configure.ac  guix.scm  pre-inst-env.in  yaml.scm  yamlpp.scm
.guix/modules/: guile-yaml-package.scm  guile-yamlpp-package.scm
doc/: .dir-locals.el  guile-yamlpp.texi  local.mk
tests/: example.scm  test-config-generation.scm  test-output-collections.scm  test-output-primitives.scm
